--- a/package.json
+++ b/package.json
@@ -11,13 +11,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
+    "@angular/cdk": "^12.2.2",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
     "@angular/core": "~12.1.0",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.1.0",
+    "@angular/material": "^12.2.2",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/chart.js": "^2.9.34",
+    "angular-bootstrap-md": "^11.1.0",
+    "angular-datatables": "^12.0.0",
+    "animate.css": "^4.1.1",
+    "apexcharts": "^3.27.3",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^2.9.4",
+    "datatables.net": "^1.10.20",
+    "datatables.net-bs4": "^1.10.20",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "ng-apexcharts": "^1.5.12",
+    "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -26,7 +43,9 @@
     "@angular-devkit/build-angular": "~12.1.0",
     "@angular/cli": "~12.1.0",
     "@angular/compiler-cli": "~12.1.0",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.3.33",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
